@@ -1,3 +1,8 @@
+2008-01-28  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* MethodSignatureTest.cs: Adapt unit tests for API changes. Add 
+	test cases for ToString.
+
 2008-01-18  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* MethodSignatureTest.cs: Unit tests by Andreas Noever. Some of them
